# afl-match-outcome-model

./: .gitignore  Build.sh  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
aflpy/: create_match_stats_enriched.py  create_player_stats_enriched.py
notebooks/: 01_data_preparation.ipynb  01_match_outcome_xgb.ipynb  02_base_xgb_model.ipynb  02_base_xgb_model_cv_2023_validation.ipynb  02_base_xgb_model_time_series_validation.ipynb  02_xgb_predict.ipynb  03_match_outcome_lstm.ipynb
notebooks/neural_networks/: tf_lstm_v4.ipynb
src/afl_match_outcome_model/: config.py  modelling_data_contract.py
src/afl_match_outcome_model/data_preparation/: _create_match_stats.py  _create_player_stats.py  aggregation.py  create_match_stats_enriched.py  create_player_stats_enriched.py  data_loader.py  elo.py  feature_engineering.py  features.py  match_id_utils.py  match_summary_preprocessor.py  pipeline_utils.py  preprocessing.py  preprocessor.py  rolling.py  squad.py  transformers.py  update_preprocessor.py  utils.py
src/afl_match_outcome_model/evaluation/: model_evaluation.py
src/afl_match_outcome_model/modelling/: hyperparameter_tuning.py  optuna_xgb_param_grid.py  supermodel.py
src/afl_match_outcome_model/predict/: predict.py  predict_margin.py  predict_outcome.py  upload_features.py
src/afl_match_outcome_model/visualisation/: afl_colours.py  plotting_clusters.py  plotting_defensive50s.py  plotting_expected_score.py  plotting_expected_score_worm.py  plotting_expected_vaep_heatmap.py  plotting_expected_vaep_scatter.py  plotting_inside50s.py  (+6 more)
